crates/data-dict/tests/snapshots/draft__append_inserts_after_last_table_and_preserves_bytes.snap
---
source: crates/data-dict/tests/draft.rs
expression: outcome.content
---
# My hand-written dictionary.
$version: 0.1.0
$learn_more: http://data-dict.tidyverse.org/

tables:
  - name: otters   # the flagship table
    source:
      parquet: data/otters.parquet
    columns:
      - name: otter_id
        type: number(id)
        examples: [1, 2, 3]

  - name: pups
    source:
      parquet: pups.parquet
    todo: |
      - Write the table's `description`. What's the grain? What's the
        population? How was the data collected?
      - Record a `primary_key`, if present.
    columns:
      - name: pup_count
        type: number
        range: [0, 2]
        examples: [0, 1, 2]
        todo: |
          - Add a `description`.
          - Pick a more specific numeric type, and keep whichever of `range` and
            `examples` is appropriate.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present

glossary:
  pup: An otter younger than one year.
