crates/data-dict/tests/snapshots/draft__append_without_tables_key_starts_the_section.snap
---
source: crates/data-dict/tests/draft.rs
expression: outcome.content
---
$version: 0.1.0
$learn_more: http://data-dict.tidyverse.org/

tables:
  - name: pups
    source:
      parquet: pups.parquet
    columns:
      - name: pup_count
        type: number
        # TODO: no missing values observed — uncomment or delete:
        # constraints: [required]
        description: >
          TODO: what does this column mean?
        examples: [0, 1, 2]
