crates/data-dict/tests/snapshots/draft__drafts_boolean_bare_and_unprofilable_name_only.snap
---
source: crates/data-dict/tests/draft.rs
expression: "draft_new(&dir, &[bools, nested])"
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

todo: |
  - Write a `description` of the dataset.

tables:
  - name: flags
    source:
      parquet: flags.parquet
    todo: |
      - Write the table's `description`. What's the grain? What's the
        population? How was the data collected?
      - Record a `primary_key`, if present.
    columns:
      - name: alive
        type: boolean
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present

  - name: telemetry
    source:
      parquet: telemetry.parquet
    todo: |
      - Write the table's `description`. What's the grain? What's the
        population? How was the data collected?
      - Record a `primary_key`, if present.
    columns:
      - name: readings
        todo: |
          - This column could not be profiled (nested). Describe it and add a
            `type`.
