crates/data-dict/tests/snapshots/draft__drafts_both_range_and_examples_for_bare_number_columns.snap
---
source: crates/data-dict/tests/draft.rs
expression: content
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

todo: |
  - Write a `description` of the dataset.

tables:
  - name: readings
    source:
      parquet: readings.parquet
    todo: |
      - Record a `primary_key`, if present.
    columns:
      - name: temperature
        type: number
        range: [1.5, 9.5]
        examples: [1.5, 3, 7.25, 9.5]
        todo: |
          - Add a `description`.
          - Pick a more specific numeric type, and keep whichever of `range` and
            `examples` is appropriate.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present
      - name: station_id
        type: number(id)
        examples: [1, 2, 3, 4]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required, unique] # all values distinct & present
            - constraints: [primary_key] # all values distinct & present
            - constraints: [required] # all values present
      - name: station
        type: string
        examples: [eskdalemuir, kew, lerwick, leuchars]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required, unique] # all values distinct & present
            - constraints: [primary_key] # all values distinct & present
            - constraints: [required] # all values present
      - name: checked
        type: boolean
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present
