crates/data-dict/tests/snapshots/draft__drafts_enum_required_and_example_todos.snap
---
source: crates/data-dict/tests/draft.rs
expression: "draft_new(&dir, &[path])"
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

description: >
  TODO: describe the dataset as a whole.

tables:
  - name: penguins
    source:
      parquet: penguins.parquet
    columns:
      - name: species
        type: string
        # TODO: no missing values observed — uncomment or delete:
        # constraints: [required]
        description: >
          TODO: what does this column mean?
        examples: [Adelie, Chinstrap, Gentoo]
        # TODO: only 3 distinct values — if this is an enum, set type: enum
        # and replace examples with:
        # values: [Adelie, Chinstrap, Gentoo]
      - name: bill_length_mm
        type: number
        description: >
          TODO: what does this column mean?
        examples: [36.7, 39.5, 46.5, 48.7, 59.6]
      - name: body_mass_g
        type: number
        # TODO: all values distinct, none missing — uncomment one or delete:
        # constraints: [required, unique]
        # constraints: [primary_key]
        description: >
          TODO: what does this column mean?
        examples: [3250, 3625, 3750, 4675, 6300]
      - name: sex
        type: string
        description: >
          TODO: what does this column mean?
        examples: [female, male]
        # TODO: only 2 distinct values — if this is an enum, set type: enum
        # and replace examples with:
        # values: [female, male]
