crates/data-dict/tests/snapshots/draft__drafts_id_types_unique_todos_and_key_candidates.snap
---
source: crates/data-dict/tests/draft.rs
expression: "draft_new(&dir, &[path])"
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

todo: |
  - Write a `description` of the dataset.

tables:
  - name: bands
    source:
      parquet: bands.parquet
    todo: |
      - Record a `primary_key`, if present.
    columns:
      - name: id
        type: number(id)
        examples: [1, 3, 5, 6, 8]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required, unique] # all values distinct & present
            - constraints: [primary_key] # all values distinct & present
            - constraints: [required] # all values present
      - name: site_id
        type: number(id)
        examples: [10, 20, 30, 40]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present
      - name: tag
        type: string
        examples: [AA-01, BB-01, CC-01, CC-02, DD-02]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required, unique] # all values distinct & present
            - constraints: [primary_key] # all values distinct & present
            - constraints: [required] # all values present
