crates/data-dict/tests/snapshots/draft__drafts_multiple_tables_in_argument_order.snap
---
source: crates/data-dict/tests/draft.rs
expression: "draft_new(&dir, &[first, second])"
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

todo: |
  - Write a `description` of the dataset.

tables:
  - name: otters
    source:
      parquet: data/otters.parquet
    todo: |
      - Write the table's `description`. What's the grain? What's the
        population? How was the data collected?
      - Record a `primary_key`, if present.
    columns:
      - name: otter_id
        type: number(id)
        examples: [1, 2]
        todo: |
          - Add a `description`.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present

  - name: pups
    source:
      parquet: data/pups.parquet
    todo: |
      - Write the table's `description`. What's the grain? What's the
        population? How was the data collected?
      - Record a `primary_key`, if present.
    columns:
      - name: pup_count
        type: number
        range: [0, 2]
        examples: [0, 1, 2]
        todo: |
          - Add a `description`.
          - Pick a more specific numeric type, and keep whichever of `range` and
            `examples` is appropriate.
          - Specify `constraints`. Some options suggested by the data:
            - constraints: [required] # all values present
