crates/data-dict/tests/snapshots/draft__long_values_fall_back_to_block_lists_and_quoting.snap
---
source: crates/data-dict/tests/draft.rs
expression: content
---
$version: 0.1.0
$learn_more: https://data-dict.tidyverse.org/

description: >
  TODO: describe the dataset as a whole.

tables:
  - name: habitats
    source:
      parquet: habitats.parquet
    columns:
      - name: habitat
        type: string
        # TODO: no missing values observed — uncomment or delete:
        # constraints: [required]
        description: >
          TODO: what does this column mean?
        examples:
          - exposed offshore reef with strong tidal currents year-round
          - protected harbor with artificial breakwaters and pilings
          - rocky intertidal zone with extensive kelp forest canopy
          - sheltered estuarine mudflats fringed by eelgrass meadows
        # TODO: only 4 distinct values — if this is an enum, set type: enum
        # and replace examples with:
        # values:
        #   - exposed offshore reef with strong tidal currents year-round
        #   - protected harbor with artificial breakwaters and pilings
        #   - rocky intertidal zone with extensive kelp forest canopy
        #   - sheltered estuarine mudflats fringed by eelgrass meadows
      - name: zip
        type: string
        # TODO: no missing values observed — uncomment or delete:
        # constraints: [required]
        description: >
          TODO: what does this column mean?
        examples: ["02134", "60614", "73301", "94110"]
        # TODO: only 4 distinct values — if this is an enum, set type: enum
        # and replace examples with:
        # values: ["02134", "60614", "73301", "94110"]
